<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hal_xsens_mti_28a</name>
  <version>0.0.0</version>
  <description>HAL for IMU Xsens MTI28A</description>
  <maintainer email="marco.lapolla5@gmail.com">Marco Lapolla</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
